# scopehal-akldebug-bridge

./: .gitmodules  CMakeLists.txt
src/aklbridge/: CMakeLists.txt  GPIOSCPIServer.cpp  GPIOSCPIServer.h  ILA8b10bSCPIServer.cpp  ILA8b10bSCPIServer.h  ILASCPIServer.cpp  ILASCPIServer.h  VIOSCPIServer.cpp  VIOSCPIServer.h  aklbridge.h  main.cpp
